Add FAQ controller
