# server/src/middleware/__generated__/swagger.json
@@ -7,6 +7,108 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"Faq": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"question": {
+						"type": "string"
+					},
+					"answer": {
+						"type": "string"
+					},
+					"categoryId": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"question",
+					"answer",
+					"categoryId"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"GetAllFaqResponse": {
+				"properties": {
+					"error": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/Faq"
+						},
+						"type": "array"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"GetFaqResponse": {
+				"properties": {
+					"error": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"$ref": "#/components/schemas/Faq"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Pick_Faq.Exclude_keyofFaq.id__": {
+				"properties": {
+					"question": {
+						"type": "string"
+					},
+					"answer": {
+						"type": "string"
+					},
+					"categoryId": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"question",
+					"answer",
+					"categoryId"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Faq.id_": {
+				"$ref": "#/components/schemas/Pick_Faq.Exclude_keyofFaq.id__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"createFaqRequest": {
+				"$ref": "#/components/schemas/Omit_Faq.id_"
+			},
+			"Partial_createFaqRequest_": {
+				"properties": {
+					"question": {
+						"type": "string"
+					},
+					"answer": {
+						"type": "string"
+					},
+					"categoryId": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
+			},
+			"updateFaqRequest": {
+				"$ref": "#/components/schemas/Partial_createFaqRequest_"
+			},
 			"FaqCategory": {
 				"properties": {
 					"id": {
@@ -346,6 +448,144 @@
 		"contact": {}
 	},
 	"paths": {
+		"/faq": {
+			"get": {
+				"operationId": "GetAllFaqs",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GetAllFaqResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "category",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"post": {
+				"operationId": "CreateFaq",
+				"responses": {
+					"201": {
+						"description": "Successfully created FAQ",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GetFaqResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/createFaqRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/faq/{id}": {
+			"get": {
+				"operationId": "GetFaqCategory",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GetFaqResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"patch": {
+				"operationId": "UpdateFaq",
+				"responses": {
+					"200": {
+						"description": "Successfully updated FAQ",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GetFaqResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/updateFaqRequest"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteFaq",
+				"responses": {
+					"204": {
+						"description": "Successfully deleted FAQ"
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/faq-category": {
 			"get": {
 				"operationId": "GetAllFaqCategories",
@@ -377,7 +617,7 @@
 				"operationId": "CreateFaqCategory",
 				"responses": {
 					"201": {
-						"description": "Successfully created external resource",
+						"description": "Successfully created FAQ Category",
 						"content": {
 							"application/json": {
 								"schema": {
